Use proto-generated types as domain model
